--- a/src/components/demos/complex/Clock.css
+++ b/src/components/demos/complex/Clock.css
@@ -5,10 +5,14 @@ svg.clock {
 }
 
 svg.clock text {
-	fill: #222;
 	stroke: none;
 }
 
 svg.clock.path {
   transition: all 0.1s ease-in-out;
+}
+
+text.middle {
+  dominant-baseline: middle;
+  text-anchor: middle;
 }
