--- a/src/components/demos/complex/BarChart/BarChart.css
+++ b/src/components/demos/complex/BarChart/BarChart.css
@@ -1,5 +1,5 @@
 .bar-graph path {
-  transition: all 0.25s ease-in-out;
+  transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .bar-graph text {
