--- a/src/components/demos/complex/BarChart/BarChart.css
+++ b/src/components/demos/complex/BarChart/BarChart.css
@@ -1,5 +1,6 @@
 .bar-graph path {
-  transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: all 0.5s;
+  /* cubic-bezier(0.175, 0.885, 0.32, 1.275); */
 }
 
 .bar-graph text {
